@@ -1,3 +1,8 @@
+Mon Nov 25 19:10:54 2002  Soeren Sandmann  <sandmann@daimi.au.dk>
+
+	* gtk/gtkprogressbar.c: Style improvements that I forgot about
+	in last commit.	
+
 Mon Nov 25 18:56:55 2002  Soeren Sandmann  <sandmann@daimi.au.dk>
 
 	* gtk/gtkprogressbar.c (gtk_progress_bar_paint): Break this
